@@ -7,7 +7,6 @@ import javafx.fxml.FXML;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.control.Alert;
-import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.scene.control.Tooltip;
@@ -22,15 +21,14 @@ import javafx.scene.layout.VBox;
 
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class FrontCoursesController {
     private final CourseManagementRepository repository = new CourseManagementRepository();
 
     @FXML private FlowPane cardsFlow;
     @FXML private Label totalCoursesLabel;
+    @FXML private Label lblCount;
     @FXML private TextField searchField;
-    @FXML private ComboBox<String> filterCombo;
     @FXML private VBox emptyState;
 
     private List<Cours> allCourses;
@@ -39,66 +37,39 @@ public final class FrontCoursesController {
     private void initialize() {
         allCourses = repository.listCours("");
         if (totalCoursesLabel != null) totalCoursesLabel.setText(String.valueOf(allCourses.size()));
-
-        // Remplir le filtre domaine
-        if (filterCombo != null) {
-            filterCombo.getItems().add("Tous les domaines");
-            allCourses.stream()
-                .map(c -> safe(c.getDomaine()))
-                .filter(d -> !d.isBlank())
-                .distinct()
-                .sorted()
-                .forEach(filterCombo.getItems()::add);
-            filterCombo.setValue("Tous les domaines");
-            filterCombo.valueProperty().addListener((obs, o, n) -> applyFilter());
-        }
-
         if (searchField != null) {
-            searchField.textProperty().addListener((obs, o, n) -> applyFilter());
+            searchField.textProperty().addListener((obs, o, n) -> applyFilter(n));
         }
-
         renderCards(allCourses);
     }
 
     @FXML
     private void onReset() {
         if (searchField != null) searchField.clear();
-        if (filterCombo != null) filterCombo.setValue("Tous les domaines");
         renderCards(allCourses);
     }
 
-    private void applyFilter() {
-        String q = searchField == null ? "" : safe(searchField.getText()).toLowerCase();
-        String domaine = filterCombo == null ? "" : safe(filterCombo.getValue());
-
+    private void applyFilter(String query) {
+        if (query == null || query.isBlank()) {
+            renderCards(allCourses);
+            return;
+        }
+        String q = query.trim().toLowerCase();
         List<Cours> filtered = allCourses.stream()
-            .filter(c -> {
-                boolean matchQ = q.isBlank()
-                    || safe(c.getTitre()).toLowerCase().contains(q)
-                    || safe(c.getDomaine()).toLowerCase().contains(q)
-                    || safe(c.getNomFormateur()).toLowerCase().contains(q);
-                boolean matchD = domaine.isBlank() || domaine.equals("Tous les domaines")
-                    || safe(c.getDomaine()).equalsIgnoreCase(domaine);
-                return matchQ && matchD;
-            })
-            .collect(Collectors.toList());
-
+            .filter(c -> safe(c.getTitre()).toLowerCase().contains(q)
+                      || safe(c.getDomaine()).toLowerCase().contains(q)
+                      || safe(c.getNomFormateur()).toLowerCase().contains(q))
+            .toList();
         renderCards(filtered);
     }
 
     private void renderCards(List<Cours> courses) {
         if (cardsFlow == null) return;
         cardsFlow.getChildren().clear();
-
         boolean empty = courses.isEmpty();
-        if (emptyState != null) {
-            emptyState.setVisible(empty);
-            emptyState.setManaged(empty);
-        }
-
-        for (Cours cours : courses) {
-            cardsFlow.getChildren().add(buildCard(cours));
-        }
+        if (emptyState != null) { emptyState.setVisible(empty); emptyState.setManaged(empty); }
+        if (lblCount != null) lblCount.setText(empty ? "" : courses.size() + " résultat" + (courses.size() > 1 ? "s" : ""));
+        for (Cours cours : courses) cardsFlow.getChildren().add(buildCard(cours));
     }
 
     private VBox buildCard(Cours cours) {
@@ -109,7 +80,6 @@ public final class FrontCoursesController {
         card.setStyle("-fx-cursor: hand;");
         card.setOnMouseClicked(e -> openDetail(cours));
 
-        // ── Bannière image ──
         StackPane banner = new StackPane();
         banner.setMinHeight(150);
         banner.setPrefHeight(150);
@@ -122,13 +92,11 @@ public final class FrontCoursesController {
         iv.setPreserveRatio(false);
         iv.setSmooth(true);
 
-        // Chip domaine
         Label domainChip = new Label(safe(cours.getDomaine()).isBlank() ? "Général" : safe(cours.getDomaine()));
         domainChip.getStyleClass().addAll("chip", "chip-info");
         StackPane.setAlignment(domainChip, Pos.TOP_RIGHT);
         StackPane.setMargin(domainChip, new Insets(10));
 
-        // Chip niveau
         Label niveauChip = new Label(safe(cours.getNiveau()));
         niveauChip.getStyleClass().addAll("chip", "chip-warning");
         StackPane.setAlignment(niveauChip, Pos.TOP_LEFT);
@@ -138,7 +106,6 @@ public final class FrontCoursesController {
         if (!domainChip.getText().isBlank()) banner.getChildren().add(domainChip);
         if (!niveauChip.getText().isBlank()) banner.getChildren().add(niveauChip);
 
-        // ── Corps ──
         VBox body = new VBox(8);
         body.setPadding(new Insets(14, 16, 14, 16));
 
@@ -151,7 +118,6 @@ public final class FrontCoursesController {
         desc.getStyleClass().add("project-card-subtitle");
         desc.setWrapText(true);
 
-        // ── Footer ──
         HBox footer = new HBox(8);
         footer.setAlignment(Pos.CENTER_LEFT);
         footer.setStyle("-fx-border-color: -edu-border transparent transparent transparent; -fx-border-width: 1 0 0 0; -fx-padding: 8 0 0 0;");
@@ -182,29 +148,17 @@ public final class FrontCoursesController {
         String imgPath = safe(cours.getImage());
         if (!imgPath.isBlank() && !imgPath.startsWith("auto:")) {
             File f = new File(imgPath);
-            if (f.exists()) {
-                try { return new Image(f.toURI().toString(), 270, 150, false, true); }
-                catch (Exception ignored) {}
-            }
-            if (imgPath.startsWith("http://") || imgPath.startsWith("https://")) {
-                try { return new Image(imgPath, 270, 150, false, true, true); }
-                catch (Exception ignored) {}
-            }
+            if (f.exists()) { try { return new Image(f.toURI().toString(), 270, 150, false, true); } catch (Exception ignored) {} }
+            if (imgPath.startsWith("http://") || imgPath.startsWith("https://")) { try { return new Image(imgPath, 270, 150, false, true, true); } catch (Exception ignored) {} }
             var res = getClass().getResource(imgPath.startsWith("/") ? imgPath : "/" + imgPath);
-            if (res != null) {
-                try { return new Image(res.toExternalForm(), 270, 150, false, true); }
-                catch (Exception ignored) {}
-            }
+            if (res != null) { try { return new Image(res.toExternalForm(), 270, 150, false, true); } catch (Exception ignored) {} }
         }
         String domain = safe(cours.getDomaine()).toLowerCase();
-        String path;
-        if (domain.contains("informatique") || domain.contains("développement") || domain.contains("ia") || domain.contains("intelligence") || domain.contains("web") || domain.contains("mobile")) {
-            path = "/assets/images/02.9bb56457.png";
-        } else if (domain.contains("math") || domain.contains("physique") || domain.contains("data") || domain.contains("science")) {
-            path = "/assets/images/ss.png";
-        } else {
-            path = "/assets/images/app-icon.png";
-        }
+        String path = (domain.contains("informatique") || domain.contains("développement") || domain.contains("ia") || domain.contains("web") || domain.contains("mobile"))
+            ? "/assets/images/02.9bb56457.png"
+            : (domain.contains("math") || domain.contains("physique") || domain.contains("data") || domain.contains("science"))
+            ? "/assets/images/ss.png"
+            : "/assets/images/app-icon.png";
         var url = getClass().getResource(path);
         return new Image(url == null ? "" : url.toExternalForm(), 270, 150, false, true);
     }
@@ -215,22 +169,21 @@ public final class FrontCoursesController {
             javafx.scene.Parent root = loader.load();
             FrontCourseDetailController ctrl = loader.getController();
             ctrl.setCours(cours);
-            // Naviguer dans le contentWrap du shell (pas remplacer tout le shell)
             javafx.scene.Node current = cardsFlow;
-            while (current != null && !(current instanceof javafx.scene.layout.StackPane sp && sp.getId() != null && sp.getId().equals("contentWrap"))) {
+            while (current != null) {
+                if (current instanceof javafx.scene.layout.StackPane sp && "contentWrap".equals(sp.getId())) {
+                    sp.getChildren().setAll(root);
+                    return;
+                }
                 current = current.getParent();
             }
-            if (current instanceof javafx.scene.layout.StackPane contentWrap) {
-                contentWrap.getChildren().setAll(root);
-            } else {
-                // fallback : remplacer la scène
-                javafx.scene.Scene scene = cardsFlow.getScene();
-                if (scene != null) scene.setRoot(root);
-            }
+            javafx.scene.Scene scene = cardsFlow.getScene();
+            if (scene != null) scene.setRoot(root);
         } catch (Exception e) {
             Alert alert = new Alert(Alert.AlertType.ERROR);
             alert.setTitle("Erreur");
-            alert.setContentText(e.getMessage());
+            alert.setContentText(e.getMessage() != null ? e.getMessage() : e.getClass().getName());
+            e.printStackTrace();
             alert.showAndWait();
         }
     }
